# nn-roadsign-detection

./: .gitignore  Makefile  README.md
backend/: Makefile  main.py  pyproject.toml
backend/darknet/: Makefile  darknet_video.py
backend/examples/: pyproject.toml  server.py
backend/templates/: client.js
client/public/: index.html
client/src/: routes.js
client/src/api/: api.js
client/src/components/Configurator/: Configurator.js
client/src/components/Footer/: Footer.js
client/src/components/Navbars/: AdminNavbar.js  AdminNavbarLinks.js
client/src/components/Sidebar/: SidebarHelp.js  index.js
client/src/layouts/: Admin.js
client/src/views/Dashboard/PhotoPrediction/: index.js
client/src/views/Dashboard/RealtimePrediction/: index.js
client/src/views/Dashboard/VideoPrediction/: index.js
darknet/: Makefile  darknet_video.py
darknet_python/: Makefile  darknet_images.py
notebook/: Makefile  Untitled.ipynb  main.py  pyproject.toml
server/: Dockerfile  Makefile  main.py  yolov7-darknet.cfg
server/darknet/: darknet_video.py
worker/: Dockerfile  Makefile  client.js  index.html  obj.data  obj.names  worker.py  yolov7-darknet.cfg
worker/darknet/: darknet_video.py
