[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["s-sorokaty <sorokaty0824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0.68"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
