[tool.poetry]
name = "notebook"
version = "0.1.0"
description = ""
authors = ["s-sorokaty <sorokaty0824@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
