[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["s-sorokaty <sorokaty0824@gmail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
aiortc = "^1.4.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
